--- a/app/sass/base/_typography.scss
+++ b/app/sass/base/_typography.scss
@@ -1,1 +1,19 @@
+@font-face {
+  font-family: 'icon';
+  src: url('fonts/icon.eot?lhqd3m');
+  src: url('fonts/icon.eot?lhqd3m#iefix') format('embedded-opentype'),
+    url('fonts/icon.ttf?lhqd3m') format('truetype'),
+    url('fonts/icon.woff?lhqd3m') format('woff'),
+    url('fonts/icon.svg?lhqd3m#icon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 
+@each $icon in $icons {
+  .icon-#{nth($icon, 1)} {
+    @extend %icon-font;
+    &:before {
+      content: nth($icon, 2);
+    }
+  }
+}
