--- a/app/sass/base/_reset.scss
+++ b/app/sass/base/_reset.scss
@@ -7,13 +7,27 @@ html {
   box-sizing: inherit;
 }
 
-body, header, main, section, h1, h2, h3, ul, li, p, a {
+body, header, main, section, div, input, h1, h2, h3, ul, li, p, a {
   margin: 0;
   padding: 0;
+}
+
+body, h1, h2, h3 {
   font-weight: normal;
-  text-decoration: none;
+}
+
+input {
+  background: none;
+  border: none;
+  &:focus {
+    outline: none;
+  }
 }
 
 li {
   list-style: none;
+}
+
+a {
+  text-decoration: none
 }
