Add locations controller and form directive

--- a/app/sass/modules/_form.scss
+++ b/app/sass/modules/_form.scss
@@ -21,4 +21,8 @@ form {
   .right {
     margin-left: 2.5%;
   }
+  .ng-hide:not(.ng-hide-animate) {
+    display: block !important;
+    visibility: hidden;
+  }
 }
