--- a/app/templates/locations/directives/location_form.html
+++ b/app/templates/locations/directives/location_form.html
@@ -3,7 +3,7 @@
     <label data-ng-show="location.display" for="location-name">Location Name</label>
     <input
       data-ng-model="location.name"
-      data-ng-change="enable()"
+      data-ng-change="enableBtns()"
       id="location-name"
       type="text"
       placeholder="Location Name">
@@ -13,7 +13,7 @@
     <input
       data-ng-model="location.contactEmail"
       data-ng-model-options="{ allowInvalid: true }"
-      data-ng-change="enable()"
+      data-ng-change="enableBtns()"
       id="contact-email"
       type="email"
       placeholder="Contact Email">
@@ -22,7 +22,7 @@
     <label data-ng-show="location.address" for="address">Address</label>
     <input
       data-ng-model="location.address"
-      data-ng-change="enable()"
+      data-ng-change="enableBtns()"
       id="address"
       type="text"
       placeholder="Address">
@@ -31,7 +31,7 @@
     <label data-ng-show="location.addressTwo" for="address-two">Address 2</label>
     <input
       data-ng-model="location.addressTwo"
-      data-ng-change="enable()"
+      data-ng-change="enableBtns()"
       id="address-two"
       type="text"
       placeholder="Address 2">
@@ -41,7 +41,7 @@
     <input
       data-ng-model="location.replyEmail"
       data-ng-model-options="{ allowInvalid: true }"
-      data-ng-change="enable()"
+      data-ng-change="enableBtns()"
       id="reply-email"
       type="email"
       placeholder="Reply To Email">
@@ -50,25 +50,33 @@
     <label data-ng-show="location.city" for="city">City</label>
     <input
       data-ng-model="location.city"
-      data-ng-change="enable()"
+      data-ng-change="enableBtns()"
       id="city"
       type="text"
       placeholder="City">
   </div>
   <div class="short">
-    <label data-ng-show="location.state" for="state">State</label>
-    <input
-      data-ng-model="location.state"
-      data-ng-change="enable()"
-      id="state"
-      type="text"
-      placeholder="State">
+    <div>
+      <label data-ng-show="location.state" for="state">State</label>
+      <input
+        data-ng-model="location.state"
+        data-ng-change="enableBtns()"
+        data-ng-focus="showDropdown(location)"
+        data-ng-blur="hideDropdown(location)"
+        id="state"
+        type="text"
+        placeholder="State">
+        <span class="icon-chevron"></span>
+    </div>
+    <ul data-ng-if="location.dropdown" class="dropdown">
+      <li data-ng-repeat="state in states" data-ng-click="setState(location, state)">{{ state }}</li>
+    </ul>
   </div>
   <div class="short">
     <label data-ng-show="location.zip" for="zip">Zip</label>
     <input
       data-ng-model="location.zip"
-      data-ng-change="enable()"
+      data-ng-change="enableBtns()"
       id="zip"
       type="text"
       placeholder="Zip">
@@ -77,7 +85,7 @@
     <label data-ng-show="location.phone" for="phone">Phone</label>
     <input
       data-ng-model="location.phone"
-      data-ng-change="enable()"
+      data-ng-change="enableBtns()"
       id="phone"
       type="tel"
       placeholder="Phone">
