Add custom select dropdown

--- a/app/sass/base/_typography.scss
+++ b/app/sass/base/_typography.scss
@@ -12,6 +12,7 @@
 @each $icon in $icons {
   .icon-#{nth($icon, 1)} {
     @extend %icon-font;
+    color: inherit;
     &:before {
       content: nth($icon, 2);
     }
