--- a/app/sass/modules/_form.scss
+++ b/app/sass/modules/_form.scss
@@ -26,12 +26,24 @@ form {
     visibility: hidden;
   }
   #state {
-    width: 85%;
+    width: 80%;
   }
   .icon-chevron {
+    display: inline-block;
+    text-align: right;
     border-bottom: 1px solid border-color(underline);
     padding-bottom: 10px;
     margin-left: -5px;
+    width: 20%;
+  }
+  .expanded {
+    text-align: left;
+    border-bottom: none;
+    border-top: 2px solid border-color(highlight);
+    padding-bottom: 11px;
+    padding-top: 10px;
+    margin-top: -10px;
+    transform: rotate(180deg);
   }
   .dropdown {
     position: absolute;
