--- a/app/templates/locations/directives/location_form.html
+++ b/app/templates/locations/directives/location_form.html
@@ -61,7 +61,7 @@
       <option data-ng-repeat="state in states" value="{{ state }}">{{ state }}</option>
     </select>
   </div>
-  <div class="short" aria-hidden="true">
+  <div class="select short" aria-hidden="true">
     <div>
       <label data-ng-show="location.state" for="state">State</label>
       <input
