--- a/app/sass/modules/_form.scss
+++ b/app/sass/modules/_form.scss
@@ -1,7 +1,7 @@
 form {
-  div {
+  > div {
     display: inline-block;
-    padding: 0.5rem 0.5%;
+    margin: 0.5rem 1.5% 0.5rem 0;
     input {
       width: 100%;
     }
@@ -10,43 +10,42 @@ form {
     width: 12.2%;
   }
   .medium {
-    width: 24.8%;
+    width: 26.4%;
   }
   .long {
-    width: 35%;
+    width: 39%;
   }
   .huge {
-    width: 50%;
+    width: 55%;
   }
   .right {
-    margin-left: 2.5%;
+    margin-left: 3.5%;
+    margin-right: 0;
   }
   .ng-hide:not(.ng-hide-animate) {
     display: block !important;
     visibility: hidden;
   }
   #state {
-    width: 80%;
+    width: 79%;
+  }
+  .select {
+    position: relative;
   }
   .icon-chevron {
-    display: inline-block;
-    text-align: right;
     border-bottom: 1px solid border-color(underline);
     padding-bottom: 10px;
-    margin-left: -5px;
+    margin-left: -6px;
     width: 20%;
   }
   .expanded {
-    text-align: left;
     border-bottom: none;
     border-top: 2px solid border-color(highlight);
     padding-bottom: 11px;
     padding-top: 10px;
     margin-top: -10px;
-    transform: rotate(180deg);
   }
   .dropdown {
-    position: absolute;
-    z-index: 100;
+    width: 100%
   }
 }
