--- a/app/sass/utils/_variables.scss
+++ b/app/sass/utils/_variables.scss
@@ -20,6 +20,7 @@ $font-colors: (
   secondary: #3D2C2F,
   blend: #ABAFC3,
   highlight: #508DB4,
+  hover: red,
   cancel: #7A7977,
   save: #FFFFFF
 );
