--- a/app/sass/layout/_app.scss
+++ b/app/sass/layout/_app.scss
@@ -1,9 +1,21 @@
 .app {
   .link-dropdown {
-    width: 150px;
+    display: inline-block;
     position: relative;
+    a {
+      color: font-color(highlight);
+      &:hover {
+        color: font-color(hover);
+      }
+    }
+    .focus {
+      color: font-color(hover);
+      .icon-chevron {
+        transform: rotate(180deg);
+      }
+    }
     .dropdown {
-      width: 100%;
+      width: calc(100% - 20px);
     }
   }
 }
