--- a/app/sass/utils/_variables.scss
+++ b/app/sass/utils/_variables.scss
@@ -20,9 +20,9 @@ $font-colors: (
   secondary: #3D2C2F,
   blend: #ABAFC3,
   highlight: #508DB4,
-  hover: red,
+  hover: #78AF3B,
   cancel: #7A7977,
-  save: #FFFFFF
+  disabled: #FFFFFF
 );
 
 $background-colors: (
@@ -31,7 +31,7 @@ $background-colors: (
   offset: #FDFDFD,
   selected: #FAFCFC,
   disabled: #ABAFC3,
-  enabled: #78AF3B
+  save: #78AF3B
 );
 
 $border-colors: (
