Add firefly meme

--- a/app/sass/layout/_settings.scss
+++ b/app/sass/layout/_settings.scss
@@ -20,4 +20,11 @@
       border-bottom: 2px solid border-color(highlight);
     }
   }
+  .other {
+    padding: 2rem;
+    img {
+      display: block;
+      margin: 0 auto;
+    }
+  }
 }
