--- a/app/sass/modules/_location.scss
+++ b/app/sass/modules/_location.scss
@@ -3,7 +3,7 @@
     width: 10rem;
     margin: 0 1%;
   }
-  li:last-child{
+  .create{
     background-color: background-color(secondary);
     a {
       color: font-color(highlight);
